Update DonationService.java
service update - filters